[gd_scene load_steps=4 format=3 uid="uid://wxirmmbq7r5v"]

[ext_resource type="Script" uid="uid://dloo22pkpbuy2" path="res://Scripts/hover.gd" id="1_x4gpu"]
[ext_resource type="FontFile" uid="uid://jqjuimpqswj8" path="res://Imagens/alegreya-sc/AlegreyaSC-Regular.ttf" id="2_jgh7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2tf6"]
size = Vector2(301.1, 146.19)

[node name="Acesso" type="Area2D"]
rotation = -0.0447838
script = ExtResource("1_x4gpu")
metadata/Lugar = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(80.6014, 34.448)
shape = SubResource("RectangleShape2D_r2tf6")

[node name="Label" type="Label" parent="."]
offset_left = -18.0
offset_top = 0.999969
offset_right = 175.0
offset_bottom = 71.0
rotation = -0.0447838
theme_override_colors/font_color = Color(0.558604, 0.0380295, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_jgh7h")
theme_override_font_sizes/font_size = 45
text = "Elevador"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
